refactoring prop-file